# Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.editor/: imgui.ini
.github/workflows/: cmake-single-platform.yml  commit-linter.yml
EngineHeaderTool/: EngineHeaderTool.py  readme.md  requirements.txt
cmake/: global_settings.cmake
res/models/arrow/: scene.gltf
res/models/buoy/: light_buoy.gltf
res/models/generator/: generator.gltf
res/models/ground/: ground.gltf
res/models/harborIslands/: bottom_big.gltf  bottom_small.gltf  corner_big_l.gltf  corner_big_r.gltf  corner_small_l.gltf  corner_small_r.gltf  end_big_l.gltf  end_big_r.gltf  end_small_l.gltf  end_small_r.gltf
res/models/hovercraft/: hovercraft.gltf
res/models/hubert/: floor.gltf
res/models/iceIslands/: c_1.gltf  c_2.gltf  c_3.gltf  c_4.gltf  c_5.gltf  c_6.gltf  c_7.gltf  s_1.gltf  s_2.gltf  s_3.gltf  s_4.gltf
res/models/iglooVeryFinal/: igloo.gltf
res/models/keeper/: keeper.gltf
res/models/keeperInHovercraft/: keeper.gltf  keeperInHovercraft.gltf  merged.gltf
res/models/lighthouse/: lighthouse.gltf
res/models/lighthouseNew/: lighthouse.gltf
res/models/main_menu/: credits.gltf  exit.gltf  small1.gltf  small2.gltf  small3.gltf  start.gltf
res/models/man/: anim.gltf
res/models/menu_islands/: credits.gltf  start.gltf
res/models/moon/: moon.mtl
res/models/package/: package.gltf
res/models/penguin/: body.gltf  wing_left.gltf  wing_right.gltf
res/models/portfloor/: portfloor.gltf
res/models/pyramid3/: scene.gltf
res/models/scene/: scene.gltf
res/models/ship/: ship.gltf
res/models/shipBig/: shipBig.gltf
res/models/shipMedium/: shipMedium.gltf
res/models/shipPirates/: shipPirates.gltf
res/models/shipSmall/: shipSmall.gltf
res/models/shipTool/: shipTool.gltf
res/models/skeleton/: skeleton.gltf
res/models/skinning_test/: man.gltf
res/models/skull/: skull.gltf
res/models/snowman/: snowman.gltf
res/models/stones/: stones.gltf
res/models/water/: water.gltf
res/models/wood/: wood1.gltf  wood2.gltf
res/models/workshop/: workshop.gltf
res/prefabs/: A_DIRECTIONAL.txt  A_WODA.txt  Buoy.txt  CREDITS.txt  Crash.txt  CreditScreen.txt  Customer.txt  CustomerManager.txt  DEBUGINPUTCONTROLLER.txt  Directional light.txt  EXIT.txt  EndScreen.txt  Exclamation.txt  FallingSnow.txt  Fish1.txt  Fish3.txt  Fish5.txt  FloatersManager.txt  Floor.txt  Game Controller.txt  Generator.txt  GeneratorUpgrade.txt  HarborBig.txt  HarborSmall.txt  Hovercraft.txt  KeeperDust.txt  KeeperSplash.txt  Level_0.txt  Level_1.txt  Level_2.txt  Level_3.txt  Level_4.txt  Level_5.txt  Level_6.txt  Lighthouse Light.txt  Lighthouse.txt  MousePrompt.txt  NowPrompt.txt  ParticleSystem.txt  PenguinJump.txt  (+18 more)
res/scenes/: ButtonTest.txt  ColliderTest.txt  Level_1.txt  Level_2.txt  MainScene.txt  ParticleSystemTest.txt  PromptTest.txt  buoyancy_test.txt  harborBig.txt  harborSmall.txt  harbors.txt  models.txt  scene.txt
res/shaders/: ShadingDefines.h  blur.hlsl  common_functions.hlsl  deferred_lighting.hlsl  fragment.frag  fragment_sphere.frag  fxaa.hlsl  g_buffer_shader.hlsl  gamma.hlsl  geometry.geo  glitter.hlsl  halo.hlsl  light.frag  light.vert  light_source.hlsl  lighting_calculations.hlsl  lit.hlsl  particle.hlsl  point_shadow_mapping.hlsl  readme.md  shadow_mapping.hlsl  simple.hlsl  skybox.frag  skybox.hlsl  skybox.vert  ssao.hlsl  ssr.hlsl  standard.frag  standard.vert  standard_instanced.vert  structs.hlsl  terrain.frag  terrain.tcs  terrain.tes  terrain.vert  ui.hlsl  vertex.vert  vertex_sphere.vert  water.hlsl
res/shaders/glsl/: frustum_culling.glsl  light.frag  light.vert  reflective.frag  refractive.frag  skybox.frag  skybox.vert  standard.vert  terrain.frag  terrain.tes  vertex.vert  vertex_sphere.vert
res/shaders_hlsl/: shader.hlsl
res/textures/skybox/interstellar/: interstellar_up.tga
res/textures/water/: license
src/: .clang-format  AssetPreloader.cpp  AssetPreloader.h  AstronomicalObject.cpp  AstronomicalObject.h  BlurPassContainer.cpp  BlurPassContainer.h  Bounds.cpp  Bounds.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Collider2D.cpp  Collider2D.h  CommonEntities.cpp  CommonEntities.h  Component.cpp  Component.h  ComponentList.h  ConstantBufferTypes.h  Cube.cpp  Cube.h  Curve.cpp  Curve.h  Debug.cpp  Debug.h  DebugDrawing.cpp  DebugDrawing.h  DebugInputController.cpp  DebugInputController.h  DialogueObject.h  DialoguePromptController.cpp  DialoguePromptController.h  DirectionalLight.cpp  DirectionalLight.h  DrawType.h  Drawable.cpp  Drawable.h  (+148 more)
src/AK/: AK.h  AnimXForm.h  Badge.h  HashedString.cpp  HashedString.h  Math.cpp  Math.h  ScopeGuard.h  Types.h  aiHelpers.h
src/Game/: Clock.cpp  Clock.h  Credits.cpp  Credits.h  Customer.cpp  Customer.h  CustomerManager.cpp  CustomerManager.h  EndScreen.cpp  EndScreen.h  Factory.cpp  Factory.h  Game.cpp  Game.h  GameController.cpp  GameController.h  HovercraftWithoutKeeper.cpp  HovercraftWithoutKeeper.h  IceBound.cpp  IceBound.h  LevelController.cpp  LevelController.h  Lighthouse.cpp  Lighthouse.h  LighthouseKeeper.cpp  LighthouseKeeper.h  LighthouseLight.cpp  LighthouseLight.h  Path.cpp  Path.h  Player.cpp  Player.h  Popup.cpp  Popup.h  Port.cpp  Port.h  Ship.cpp  Ship.h  ShipEyes.cpp  ShipEyes.h  (+4 more)
src/Game/Player/: PlayerInput.cpp  PlayerInput.h
